se obtiene datos component Perfil de admin

--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <mat-card>
     <mat-action-list>
         <div mat-subheader>Menu</div>
-        <button mat-list-item>
-            <mat-icon routerLink="/admin" mat-list-icon>home</mat-icon>Inicio
+        <button mat-list-item routerLink="/admin">
+            <mat-icon  mat-list-icon>home</mat-icon>Inicio
         </button>
         <button mat-list-item routerLink="/admin/profile">
             <mat-icon mat-list-icon>account_circle</mat-icon>Perfil
