se agrega categorias al sidebar component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,6 +36,7 @@
     *ngIf="isLoggin"
     mat-icon-button 
     class="example-icon favorite-icon nav-link mr100 ml100" 
+    routerLink="/admin/profile"
     aria-label="Example icon-button with heart icon">
         {{user.nombre}}
     </a>
