--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -7,5 +7,20 @@
         <button mat-list-item routerLink="/admin/profile">
             <mat-icon mat-list-icon>account_circle</mat-icon>Perfil
         </button>
+        <button mat-list-item routerLink="/admin/profile">
+            <mat-icon mat-list-icon>list</mat-icon>Categorías
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            <mat-icon mat-list-icon>add_circle_outline</mat-icon>Agregar categorias
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            <mat-icon mat-list-icon>quiz</mat-icon>Cuestionarios
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            <mat-icon mat-list-icon>add</mat-icon>Agregar cuestionarios
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            <mat-icon mat-list-icon>logout</mat-icon>Salir
+        </button>
     </mat-action-list>
 </mat-card>
