--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card style="margin-left: 20px">
     <h1>Detalles del perfil</h1>
     <mat-card-content>
         <div class="bootstrap-wrapper">
