--- a/src/app/pages/admin/view-categorias/view-categorias.component.html
+++ b/src/app/pages/admin/view-categorias/view-categorias.component.html
@@ -2,13 +2,16 @@
     <mat-card-header>
         <mat-card-title>Todas las categorias</mat-card-title>
     </mat-card-header>
-    <mat-list *ngFor="let c of categorias">
-        <mat-list-item>
-            <div mat-line>{{c.titulo}}</div>
-            <div mat-line>{{c.descripcion}}</div>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-    </mat-list>
+    <mat-card-content>
+        <!--VER CSS PARA SOLUCIONAR PROBLEMA DE ESPACION EN MAT-CONTENT -->
+        <mat-list *ngFor="let c of categorias">
+            <mat-list-item>                
+                <div mat-line><mat-icon mat-list-icon>category</mat-icon>{{c.titulo}}</div>
+                <div mat-line>{{c.descripcion}}</div>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+        </mat-list>
+    </mat-card-content>
     <mat-card-actions>
         <div class="text-center">
             <button mat-raised-button color="primary">Agregar categoria</button>
