--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
         <button mat-list-item routerLink="/admin/categorias">
             <mat-icon mat-list-icon>list</mat-icon>Categorías
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/add-categoria">
             <mat-icon mat-list-icon>add_circle_outline</mat-icon>Agregar categorias
         </button>
         <button mat-list-item routerLink="/admin/profile">
