--- a/src/app/pages/admin/view-categorias/view-categorias.component.html
+++ b/src/app/pages/admin/view-categorias/view-categorias.component.html
@@ -14,7 +14,7 @@
     </mat-card-content>
     <mat-card-actions>
         <div class="text-center">
-            <button mat-raised-button color="primary">Agregar categoria</button>
+            <button mat-raised-button color="primary" routerLink="/admin/add-categoria">Agregar categoria</button>
         </div>
     </mat-card-actions>
 </mat-card>
