--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <button mat-list-item routerLink="/admin/add-categoria">
             <mat-icon mat-list-icon>add_circle_outline</mat-icon>Agregar categorias
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/examenes">
             <mat-icon mat-list-icon>quiz</mat-icon>Cuestionarios
         </button>
         <button mat-list-item routerLink="/admin/profile">
