vista agregar examen, actualizado margin top de todos los cards

--- a/src/app/pages/admin/view-categorias/view-categorias.component.html
+++ b/src/app/pages/admin/view-categorias/view-categorias.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mt10">
     <mat-card-header>
         <mat-card-title>Todas las categorias</mat-card-title>
     </mat-card-header>
