--- a/src/app/pages/admin/view-examenes/view-examenes.component.html
+++ b/src/app/pages/admin/view-examenes/view-examenes.component.html
@@ -16,5 +16,5 @@
 </mat-card>
 
 <div class="container text-center mt20">
-    <button mat-raised-button color="primary">Agregar cuestionario</button>
+    <button mat-raised-button color="primary" routerLink="/admin/add-examen">Agregar cuestionario</button>
 </div>
