--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,5 +1,7 @@
-<mat-card style="margin-left: 20px">
-    <h1>Detalles del perfil</h1>
+<mat-card class="mt10" style="margin-left: 20px">
+    <mat-card-header>
+        <mat-card-title>Detalles del perfil</mat-card-title>
+    </mat-card-header>
     <mat-card-content>
         <div class="bootstrap-wrapper">
             <div class="container">
@@ -14,7 +16,7 @@
                     <div class="col-md-10 offset-md-1">
                         <table class="table text-center">
                             <tr>
-                                <td>Nombre de Usuario</td>
+                                <td>Nombre  de Usuario</td>
                                 <td>{{user.nombre}}</td>
                             </tr>
                             <tr>
