--- a/src/app/pages/admin/add-categoria/add-categoria.component.html
+++ b/src/app/pages/admin/add-categoria/add-categoria.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mt10">
     <mat-card-header>
         <mat-card-title>Agregar Categoria</mat-card-title>
     </mat-card-header>
