--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mt10">
     <mat-action-list>
         <div mat-subheader>Menu</div>
         <button mat-list-item routerLink="/admin">
@@ -16,7 +16,7 @@
         <button mat-list-item routerLink="/admin/examenes">
             <mat-icon mat-list-icon>quiz</mat-icon>Cuestionarios
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/add-examen">
             <mat-icon mat-list-icon>add</mat-icon>Agregar cuestionarios
         </button>
         <button mat-list-item routerLink="/admin/profile">
