--- a/src/app/pages/admin/add-examen/add-examen.component.html
+++ b/src/app/pages/admin/add-examen/add-examen.component.html
@@ -8,7 +8,8 @@
                 <form>
                     <mat-form-field class="w100" appearance="fill">
                         <mat-label>Título</mat-label>
-                        <input 
+                        <input
+                        [(ngModel)]="examenData.titulo" 
                         type="text"
                         name="titulo"
                         placeholder="Digite el titulo"
@@ -16,7 +17,8 @@
                     </mat-form-field>
                     <mat-form-field class="w100" appearance="fill">
                         <mat-label>Descripción</mat-label>
-                        <textarea 
+                        <textarea
+                        [(ngModel)]="examenData.descripcion" 
                         rows="8"
                         type="text"
                         name="descripcion"
@@ -29,7 +31,8 @@
                         <div class="col-md-6">
                             <mat-form-field class="w100" appearance="fill">
                                 <mat-label>Puntos Máximos</mat-label>
-                                <input 
+                                <input
+                                [(ngModel)]="examenData.puntosMaximos" 
                                 type="text"
                                 name="puntosMaximos"
                                 placeholder="Digite la cantidad de puntos"
@@ -39,13 +42,33 @@
                         <div class="col-md-6">
                             <mat-form-field class="w100" appearance="fill">
                                 <mat-label>Número de preguntas</mat-label>
-                                <input 
+                                <input
+                                [(ngModel)]="examenData.numeroDePreguntas" 
                                 type="text"
                                 name="numeroDePreguntas"
                                 placeholder="Digite el numero preguntas"
                                 matInput>
                             </mat-form-field>
                         </div>
+                    </div>
+
+                    <mat-slide-toggle class="mt20" [checked]="false" color="primary">
+                        Estado de publicación
+                    </mat-slide-toggle>
+
+                    <mat-form-field appearance="fill" class="mt20 w100">
+                        <mat-label>Categorias</mat-label>
+                        <mat-select 
+                        name="categoria"
+                        [(ngModel)]="examenData.categoria.categoriaId">
+                        <mat-option *ngFor="let c of categorias" [value]="c.categoriaId">
+                            {{c.titulo}}
+                        </mat-option>
+                    </mat-select>                        
+                    </mat-form-field>
+
+                    <div class="container text-center">
+                        <button mat-raised-button color="primary">Agregar</button>
                     </div>
                 </form>
             </div>
