--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -6,7 +6,7 @@
                     <img src="../../../assets/add-friend.png" width="100" height="100">
                 </div>
                 <h1 class="text-center">Registrate aqui</h1>
-                <form (ngSubmit)="formSubmit()">
+                <form (ngSubmit)="formSubmit()" autocomplete="off">
                     
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Nombre de usuario</mat-label>
