vista y servico add-examen funcional

--- a/src/app/pages/admin/add-examen/add-examen.component.html
+++ b/src/app/pages/admin/add-examen/add-examen.component.html
@@ -5,10 +5,11 @@
     <mat-card-content>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <form>
+                <form (ngSubmit)="agregarExamen()">
                     <mat-form-field class="w100" appearance="fill">
                         <mat-label>Título</mat-label>
                         <input
+                        required
                         [(ngModel)]="examenData.titulo" 
                         type="text"
                         name="titulo"
