--- a/src/app/pages/admin/view-examenes/view-examenes.component.html
+++ b/src/app/pages/admin/view-examenes/view-examenes.component.html
@@ -11,6 +11,7 @@
             <button mat-stroked-button color="primary" class="ml20">Preguntas {{e.numeroPreguntas}}</button>
             <button mat-flat-button color="primary" class="ml20">Actualizar</button>
             <button mat-flat-button color="primary" class="ml20">Intentos</button>
+            <button mat-raised-button color="warn" class="ms-2" (click)="eliminarExamen(e.examenId)">Eliminar</button>
         </mat-card-actions>
     </mat-card-content>
 </mat-card>
