vista, servicio funcional actualizar examen

--- a/src/app/pages/admin/actualizar-examen/actualizar-examen.component.html
+++ b/src/app/pages/admin/actualizar-examen/actualizar-examen.component.html
@@ -1,78 +1,74 @@
 <mat-card class="mt10">
     <mat-card-header>
-        <mat-card-title>Agregar nuevo examen</mat-card-title>        
+        <mat-card-title>Actualizar Examen</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                <form (ngSubmit)="agregarExamen()">
+    <form (ngSubmit)="actualizarExamen()">
+        <mat-card-content>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
                     <mat-form-field class="w100" appearance="fill">
-                        <mat-label>Título</mat-label>
+                        <mat-label>Titulo</mat-label>
                         <input
-                        required
-                        [(ngModel)]="examenData.titulo" 
+                        [(ngModel)]="getExamen.titulo"
+                        required 
                         type="text"
-                        name="titulo"
+                        name="titutlo"
                         placeholder="Digite el titulo"
                         matInput>
                     </mat-form-field>
                     <mat-form-field class="w100" appearance="fill">
                         <mat-label>Descripción</mat-label>
                         <textarea
-                        [(ngModel)]="examenData.descripcion" 
+                        [(ngModel)]="getExamen.descripcion"
                         rows="8"
-                        type="text"
                         name="descripcion"
                         placeholder="Digite la descripcion"
-                        matInput></textarea>
+                        matInput
+                        ></textarea>
                     </mat-form-field>
-
                     
                     <div class="row">
                         <div class="col-md-6">
                             <mat-form-field class="w100" appearance="fill">
-                                <mat-label>Puntos Máximos</mat-label>
+                                <mat-label>Puntos Maximos</mat-label>
                                 <input
-                                [(ngModel)]="examenData.puntosMaximos" 
+                                [(ngModel)]="getExamen.puntosMaximos" 
                                 type="text"
                                 name="puntosMaximos"
                                 placeholder="Digite la cantidad de puntos"
                                 matInput>
                             </mat-form-field>
-                        </div>
-                        <div class="col-md-6">
                             <mat-form-field class="w100" appearance="fill">
                                 <mat-label>Número de preguntas</mat-label>
                                 <input
-                                [(ngModel)]="examenData.numeroDePreguntas" 
+                                [(ngModel)]="getExamen.numeroDePreguntas"
                                 type="text"
                                 name="numeroDePreguntas"
-                                placeholder="Digite el numero preguntas"
+                                placeholder="Digite el numero de preguntas"
                                 matInput>
                             </mat-form-field>
                         </div>
                     </div>
 
-                    <mat-slide-toggle class="mt20" name="activo" [checked]="false" color="primary">
-                        Estado de publicación
+                    <mat-slide-toggle [(ngModel)]="getExamen.activo" class="mt20" name="activo" [checked]="false" color="primary">
+                        Estado de la publicación
                     </mat-slide-toggle>
 
                     <mat-form-field appearance="fill" class="mt20 w100">
                         <mat-label>Categorias</mat-label>
-                        <mat-select 
+                        <mat-select
                         name="categoria"
-                        [(ngModel)]="examenData.categoria.categoriaId">
+                        [(ngModel)]="getExamen.categoria.categoriaId">                    
                         <mat-option *ngFor="let c of categorias" [value]="c.categoriaId">
-                            {{c.titulo}}
-                        </mat-option>
-                    </mat-select>                        
+                                {{c.titulo}}
+                            </mat-option>
+                        </mat-select>
                     </mat-form-field>
-
-                    <div class="container text-center">
-                        <button mat-raised-button color="primary">Agregar</button>
-                    </div>
-                </form>
+                </div>
             </div>
-        </div>
-    </mat-card-content>
+            <div class="container text-center">
+                <button mat-raised-button color="primary">Guardar</button>
+            </div>
+        </mat-card-content>
+    </form>
 </mat-card>
