--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -1,6 +1,8 @@
 <mat-card class="mt10">
+    <mat-card-header>
+        <mat-card-title>Menu</mat-card-title>
+    </mat-card-header>
     <mat-action-list>
-        <div mat-subheader>Menu</div>
         <button mat-list-item routerLink="/admin">
             <mat-icon  mat-list-icon>home</mat-icon>Inicio
         </button>
