--- a/src/app/pages/admin/view-examenes/view-examenes.component.html
+++ b/src/app/pages/admin/view-examenes/view-examenes.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <mat-card-content>
         <mat-card-actions>
-            <button mat-flat-button color="primary">Preguntas</button>
+            <button mat-flat-button color="primary" [routerLink]="'/admin/ver-preguntas/'+e.examenId+'/'+e.titulo">Preguntas</button>
             <button mat-stroked-button color="primary" class="ml20">Puntos maximos {{e.PuntosMaximos}}</button>
             <button mat-stroked-button color="primary" class="ml20">Preguntas {{e.numeroPreguntas}}</button>
             <!-- NOTAR COMO SE USA EL [routerLink]="direccion" en lugar de routerLink="direccion" 
