--- a/src/app/pages/admin/view-examen-preguntas/view-examen-preguntas.component.html
+++ b/src/app/pages/admin/view-examen-preguntas/view-examen-preguntas.component.html
@@ -8,6 +8,28 @@
                         <b>{{i + 1}}) </b>                        
                         <span class="mt20" [innerHTML]="p.contenido"></span>
                     </p>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p>1) <b>{{p.opcion1}}</b></p>
+                            </div>
+                            <div class="col-md-6">
+                                <p>2) <b>{{p.opcion2}}</b></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p>3) <b>{{p.opcion3}}</b></p>
+                            </div>
+                            <div class="col-md-6">
+                                <p>4) <b>{{p.opcion4}}</b></p>
+                            </div>
+                        </div>
+                        <mat-divider></mat-divider>
+                        <p class="mt20">
+                            <b>Respuesta correcta: </b>{{p.respuesta}}
+                        </p>
+                    </div>
                 </mat-card-content>
             </mat-card>
         </div>
