funcion de preguntas

--- a/src/app/pages/admin/view-examen-preguntas/view-examen-preguntas.component.html
+++ b/src/app/pages/admin/view-examen-preguntas/view-examen-preguntas.component.html
@@ -1,8 +1,11 @@
-<h1 class="mt20">Preguntas de "" {{titulo}} ""</h1>
+<h1 class="mt20">Preguntas de <span style="font-weight: bold;">{{titulo}}</span></h1>
 <div class="bootstrap-wrapper">
     <div class="row">
         <div class="col-md-12">
-            <mat-card >
+            <div class="container text-center">
+                <button mat-raised-button color="primary" [routerLink]="'/admin/add-pregunta/'+examenId+'/'+titulo">Agregar pregunta</button>
+            </div>
+            <mat-card class="mt20">
                 <mat-card-content *ngFor="let p of preguntas; let i = index">
                     <p>
                         <b>{{i + 1}}) </b>                        
