--- a/src/styles.css
+++ b/src/styles.css
@@ -62,3 +62,6 @@ body {
 .mr100{
     margin-right: 100px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
